Make scalar-policy configs immutable (phase 2 sub-step 3, D1 batch)
Converts five pure-policy config values to immutable values with prefix-free
withers, following the Enums pattern: final fields, withers return a new instance,
createCopy() returns this (shareable). Direct-mutation callers move to
configure(X, c -> c.wither(v)) (an immutable setter's discarded return would lose
the change).

- StatementExceptions: setLengthLimit/setMessageRendering -> lengthLimit/messageRendering
- ResultProducers: allowNoResults(boolean) now returns a new instance (name kept)
- TimestampedConfig: setTimezone -> timezone
- MapMappers: setCaseChange -> caseChange
- ReflectionMappers: setColumnNameMatchers/setStrictMatching/setCaseChange/
  setAccessibleObjectStrategy -> columnNameMatchers/strictMatching/caseChange/
  accessibleObjectStrategy; disableAccessibleObjectStrategy() returns new (name kept);
  fields final, backing list is List.copyOf.

Callers across core/sqlobject tests migrated; a StatementContext-based site routes
through getConfig().configure(...). Whole reactor green (tests + static analysis).